package gameZeldiablo.Zeldiablo.Entities;

public enum Intelligence {
    /**
     * Défini l'intelligence d'un monstre.
     */
    NULLE,
    FAIBLE,
    MOYENNE,
    FORTE
}
