package gameZeldiablo.Zeldiablo.StrategieDeplacement;

import gameZeldiablo.Zeldiablo.Labyrinthe;
import gameZeldiablo.Zeldiablo.Entities.Monstre;

public class DeplacementStatique implements DeplacementStrategie {
    @Override
    public void deplacement(Labyrinthe labyrinthe, Monstre monstre) {
        // Déplacement statique (ne bouge pas)
    }
}
